Added Funding paragraph

--- a/Article.tex
+++ b/Article.tex
@@ -57,6 +57,9 @@ meriem.elkaroui\at ed.ac.uk
 
 \input{Discussion}
 
+\begin{funding}
+This work has been supported by Wellcome Trust Investigator Awards (Grant No. 205008/Z/16/Z awarded to M.E.K.), a BBSRC BB/S008012/1 responsive mode award (to M.E.K.), and a Marie Skłodowska-Curie Personal Fellowship (Grant No. 101063725-BARTAS) awarded to A.L.
+\end{funding}
 
 \begin{acknowledgements}
 We would like to thank Prof. David Leach for insightful discussions on DNA repair in \emph{E. coli}. We thank Mark Dillingham for sharing his knowledge on the biochemistry of RecBCD. We thank Johan Elf for kindly sharing the RecA-SYFP2 tandem fusion strain. We thank Jean Ollion for the development of BACMMAN and its associated tools, as well as the image analysis support he provided. We thank Elise Darmon for discussing results, and reviewing the manuscript.
