--- a/Article.tex
+++ b/Article.tex
@@ -65,6 +65,10 @@ This work has been supported by Wellcome Trust Investigator Awards (Grant No. 20
 We would like to thank Prof. David Leach for insightful discussions on DNA repair in \emph{E. coli}. We thank Mark Dillingham for sharing his knowledge on the biochemistry of RecBCD. We thank Johan Elf for kindly sharing the RecA-SYFP2 tandem fusion strain. We thank Jean Ollion for the development of BACMMAN and its associated tools, as well as the image analysis support he provided. We thank Elise Darmon for discussing results, and reviewing the manuscript.
 \end{acknowledgements}
 
+\begin{contributions}
+M.E.K. and D.T. conceived the experiments and designed the data analysis. D.T., A.L., and L.McL. built the strains. D.T. collected and analysed the data. M.E.K., D.T. and A.L. discussed the data. D.T. wrote the manuscript's first draft and created the figures. M.E.K., D.T. and A.L. revised the manuscript. L.McL., as the lab manager, oversaw order placements and maintained the lab organization. M.E.K. provided funding. All authors read, edited and approved the final manuscript.
+\end{contributions}
+
 \section*{Bibliography}
 \bibliography{Bibliography}
 
