Add competing financial interests

--- a/Article.tex
+++ b/Article.tex
@@ -69,6 +69,10 @@ We would like to thank Prof. David Leach for insightful discussions on DNA repai
 M.E.K. and D.T. conceived the experiments and designed the data analysis. D.T., A.L., and L.McL. built the strains. D.T. collected and analysed the data. M.E.K., D.T. and A.L. discussed the data. D.T. wrote the manuscript's first draft and created the figures. M.E.K., D.T. and A.L. revised the manuscript. L.McL., as the lab manager, oversaw order placements and maintained the lab organization. M.E.K. provided funding. All authors read, edited and approved the final manuscript.
 \end{contributions}
 
+\begin{interests}
+The authors declare no competing financial interests.
+\end{interests}
+
 \section*{Bibliography}
 \bibliography{Bibliography}
 
