--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -141,7 +141,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\linewidth]{SI_Figures/Cell_length_Gam.pdf}
     \end{center}
-    \caption{Average length of cells that over-express Gam or not (WT), under exposure to 0 or 30 ng/mL ciprofloxacin. Black dots show indvidual datasets, and bars the average between them. \ncells{41,403}.}
+    \caption{Average length of cells that over-express Gam or not (WT), under exposure to 0 or 30 ng/mL ciprofloxacin. Black dots show averages for indvidual datasets, and bars the average between them. \ncells{41,403}.}
     \label{SIFig:Gam_cell_length}
 \end{suppfigure*}
 
@@ -186,7 +186,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_cell_lengths.pdf}
     \end{center}
-    \caption{Evolution over time of the average cell length of wild-type and mutant \emph{E. coli} strains exposed or not to ciprofloxacin (30 ng/mL). Black dots represent average cell lengths for individual datasets, and coloured bars the median values between datasets. \ncells{56,131}.}
+    \caption{Evolution over time of the average cell length of wild-type (reproduced from Supp. Figure \ref{SIFig:Gam_cell_length} for comparison) and \dreca\ and \geneteneighty\ mutant strains exposed or not to ciprofloxacin (30 ng/ml). Black dots represent average cell lengths for individual datasets, and coloured bars the median values between them. \ncells{56,131}.}
     \label{SIFig:mutants_cell_lengths}
 \end{suppfigure*}
 
@@ -195,7 +195,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_RecB_fits.pdf}
     \end{center}
-    \caption{RecB spot lifetime histograms for wild-type (WT), \dreca and \teneighty\ strains, at 0 and 30 ng/mL ciprofloxacin, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \ncells{56,131}. \nspots{177,646}.}
+    \caption{RecB spot lifetime histograms for wild-type (WT), \dreca and \geneteneighty\ mutants, at 0 and 30 ng/mL ciprofloxacin, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \ncells{56,131}. \nspots{177,646}.}
     \label{SIFig:mutants_biexp_fits}
 \end{suppfigure*}
 
@@ -204,7 +204,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\textwidth]{SI_Figures/Nucleoid_compaction.pdf}
     \end{center}
-    \caption{Average fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min). Dots represent individual datasets, and dashes the average between them. \ncells{24,014}. \nnucl{31,441}.}
+    \caption{Average fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/ml) and duration of exposure (15 to 75 min). Dots represent averages for individual datasets, and dashes the average between them. \ncells{24,014}. \nnucl{31,441}.}
     \label{SIFig:nucleoid_compaction}
 \end{suppfigure*}
 
@@ -231,7 +231,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_nucleoid_compaction.pdf}
     \end{center}
-    \caption{Average fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min), for wild-type cells (reproduced from Supp. Figure \ref{SIFig:nucleoid_compaction} for comparison) and the \dreca\ and \teneighty\ mutants. Dots represent individual datasets, and dashes the average between them. \ncells{15,029}. \nnucl{20,831}.}
+    \caption{Average fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min), for wild-type cells (reproduced from Supp. Figure \ref{SIFig:nucleoid_compaction} for comparison) and the \dreca\ and \geneteneighty\ mutants. Dots represent averages for individual datasets, and dashes the average between them. \ncells{15,029}. \nnucl{20,831}.}
     \label{SIFig:mutants_nucleoid_compaction}
 \end{suppfigure*}
 
@@ -240,6 +240,6 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\textwidth]{SI_Figures/RecA_structures.pdf}
     \end{center}
-    \caption{RecA structures formed upon exposure to ciprofloxacin. \textbf{(A)} Representative images of cells containing different RecA structures (diffuse fluorescence, foci or filaments) after 60 minutes of exposure to ciprofloxacin. Arrows point to representative examples of each of these structures. \textbf{(B)} Proportion of cells containing RecA foci or filaments. Black dots represent individual datasets, and bars the average between them. \ncells{32,031}.}
+    \caption{RecA structures formed upon exposure to ciprofloxacin. \textbf{(A)} Representative images of cells containing different RecA structures (diffuse fluorescence, foci or filaments) after 60 minutes of exposure to ciprofloxacin. Arrows point to representative examples of each of these structures. \textbf{(B)} Proportion of cells containing RecA foci or filaments. Black dots represent averages for individual datasets, and bars the average between them. \ncells{32,031}.}
     \label{SIFig:reca_structures}
 \end{suppfigure*}
