--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,7 +1,7 @@
 \section*{Introduction}
 
 % RecBCD biochemistry
-DNA double-strand breaks (DSBs) pose a serious threat to the integrity of bacterial cells: when left unrepaired, they can lead to cell death, genome rearrangements or mutagenesis\cite{Wyman2006}. In \emph{E. coli}, DSBs are repaired through the RecBCD pathway. RecBCD is a heterotrimeric protein complex, which combines several enzymatic activities\cite{Dillingham2008}. Upon recognition of a DSB, RecBCD translocates along the DNA at a speed of $\sim$1.6 kb/s\cite{Wiktor2018}, and digests both DNA strands until it meets a specific 8-base pair sequence (5'-GCTGGTGG-3') called Chi-site. Upon recognition of the Chi-site, RecBCD stops degrading the 3' end, leading to a 3' DNA overhang. Of note, Chi recognition by RecBCD is not systematic, and was previously reported to occur with $\sim$40\% probability\cite{Taylor1992,Cockram2015}. As RecBCD creates the 3' overhang, the RecB subunit promotes loading of the RecA protein onto the single-stranded DNA (ssDNA)\cite{Churchill2000, Spies2006}. The resulting RecA-DNA nucleoprotein filament is used as a template to search for an intact homologous sequence and perform homologous recombination\cite{Wyman2004,Wiktor2021}. It is still unclear at which point exactly RecBCD dissociates from the DNA and what specifically triggers the dissociation.
+DNA double-strand breaks (DSBs) pose a serious threat to the integrity of bacterial cells: when left unrepaired, they can lead to cell death, genome rearrangements or mutagenesis\cite{Wyman2006}. In \emph{E. coli}, DSBs are repaired through the RecBCD pathway. RecBCD is a heterotrimeric protein complex, which combines several enzymatic activities\cite{Dillingham2008}. Upon recognition of a DSB, RecBCD translocates along the DNA at a speed of $\sim$1.6 kb/s\cite{Wiktor2018}, and digests both DNA strands until it meets a specific 8-base pair sequence (5'-GCTGGTGG-3') called Chi-site. Upon recognition of the Chi-site, RecBCD stops degrading the 3' end, leading to a 3' DNA overhang. Of note, Chi recognition by RecBCD is not systematic, and was previously reported to occur with $\sim$40\% probability\cite{Taylor1992,Cockram2015}. As RecBCD creates the 3' overhang, the RecB subunit promotes loading of the RecA protein onto the single-stranded DNA (ssDNA)\cite{Churchill2000, Spies2006}. The resulting RecA-DNA nucleoprotein filament is used as a template to search for an intact homologous sequence and perform homologous recombination\cite{Wyman2004,Wiktor2021}. It has been suggested that RecBCD dissociates from DNA by disassembly of the three subunits following Chi recognition\cite{Taylor1999}; however, it is still unclear what specifically triggers the dissociation, and how long RecBCD stays bound to DNA before dissociating.
 
 % Endogenous DSBs
 A common source of DSBs in \emph{E. coli} is the collision of the replication fork with DNA-bound proteins, which leads to the disassembly of the replisome\cite{Michel1997}. It has been reported that per cell cycle, $\sim$18\% of cells showed signs of endogenous DNA damage, most likely from replication fork breakage\cite{Sinha2018}. Replisome disassembly results in a Y-shaped DNA structure that is bound by the RuvAB complex, which pulls the DNA strands (in a process called "branch migration") to create a "chicken-foot" four-way DNA structure\cite{Seigneur1998}. The free end of this structure is a DNA double strand end, and is bound by RecBCD, which either (i) digests the whole DNA tail and displaces RuvAB, allowing the replisome to be re-loaded in a PriA-dependent manner\cite{Seigneur1998}, or (ii) recognises a Chi-site and loads the RecA protein onto the 3' end of the DNA tail, leading to SOS induction\cite{Michel2001}. Since this part of the DNA was recently replicated, a homologous sequence is likely to be present in close proximity, and can be used for homologous recombination.
