Added a paragraph on RecB dissociation

--- a/Discussion.tex
+++ b/Discussion.tex
@@ -1,5 +1,15 @@
 \section*{Discussion}
 
+% Main things to discuss:
+% - RecB dissociation, non-implication of RecA...: OK
+% - RecB recruitment in WT; link to Alessia's article
+% - RecB recruitment in mutants (OK, add links to Alessia's article)
+% - RecA: OK
+% - Nucleoid stuff
+
+\subsection*{RecB dissociation does not depend on RecA loading}
+One of the main questions asked in this study was how long RecBCD stays bound to DNA following DSB recognition. We have been able to estimate that in wild-type \ecoli, RecB stays bound to DNA for 10 to 15 seconds on average, independently of the concentration of ciprofloxacin. Given RecBCD's high processivity (digesting several kilobases of DNA before recognising a Chi-site) and its processing speed ($\sim$1.6 kb/s\cite{Wiktor2018}), we can reasonably expect that most of RecB's binding time is explained by its DNA degradation prior to Chi recognition, followed by rapid disassembly after Chi. This led us to ask whether RecB dissociation from DNA was triggered by its interaction with RecA. Imaging RecB in a \dreca\ mutant confirmed that this is not the case, and that RecB dissociation occurs independently of RecA loading. We can hypothesise that RecBCD's conformational change upon Chi recognition induces a destabilisation of the complex, thereby greatly reducing its processivity, and resulting in dissociation shortly after Chi. Interestingly, the \geneteneighty\ mutant had a reduced dissociation rate, which highlights the importance of RecB's exonuclease activity in the process. It is possible that digestion of the unwound DNA strands is a pre-requisite for RecBCD dissociation, and that it is performed by other cellular exonucleases in the \geneteneighty\ mutant.
+
 \subsection*{Multiple RecB recruitments per DSB in the $\mathbf{\Delta}$\emph{reca} and RecB$\mathbf{_{1080}}$ mutants}
 
 % Model of RecB recruitment to DNA
