Added a shortcut for E. coli

--- a/Article.tex
+++ b/Article.tex
@@ -7,6 +7,7 @@
 \usepackage{makecell}
 \usepackage{upgreek}
 
+\newcommand{\ecoli}{\textit{E. coli}}
 \newcommand{\dreca}{$\Delta$\textit{recA}} % ΔrecA
 \newcommand{\teneighty}{RecB$_{1080}$} % RecB1080
 \newcommand{\geneteneighty}{\textit{recB$_{1080}$}} % recB1080
