Use \ecoli shortcut where relevant

--- a/Results.tex
+++ b/Results.tex
@@ -3,7 +3,7 @@
 
 \subsection*{RecB forms long-lived spots when recruited to cipro\-floxacin DSBs}
 
-To quantify RecB binding time to DNA in live \textit{E. coli}, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:exp_principle}A). The fusion was previously used and characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process\cite{Lepore2019a,Lepore2023}. Due to the large size and topological constraints of the bacterial chromosome, DNA-bound RecB diffuses very slowly\cite{Lepore2023}. We therefore applied the previously developed technique of localisation enhancement\cite{Yu2006, Elf2007}: since RecB is present at low copy numbers in \textit{E. coli} ($\sim$5 molecules per cell on average\cite{Lepore2019a}), imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while immobile or slow-diffusing RecB molecules formed intense diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:exp_principle}A and \ref{Fig:exp_principle}B). The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these spots were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). However, their exact nature needed to be confirmed. Although DNA-bound molecules are expected to diffuse very slowly, the RecBCD-Halo complex diffuses in the crowded and constrained environment of the cytoplasm, and might undergo transient interactions with DNA\cite{Lepore2023}, which could lead to RecB spots forming independently of DNA binding. To gain more insight into the nature of RecB spots, we increased the number of induced DSBs by adding ciprofloxacin to agar pads before imaging, and measured the lifetime of the spots by recording 100-second timelapse videos with 2 sec interval between frames on different positions in the sample, for a total time of 60 min following exposure to ciprofloxacin (Figure \ref{Fig:lifetimes}A). The 1 second exposure time was optimal to detect RecB spots with good signal-to-noise, while limiting dye photobleaching and keeping a sufficient time resolution to determine spot lifetimes. Visual inspection of the timelapse data showed that RecB spot lifetime was hetereogenous, with a majority of spots being visible only for a few frames, and a small number persisting for longer times. These longer-lived spots became more frequent as the ciprofloxacin concentration was increased. Inspecting background-subtracted intensity time-traces for single RecB spots showed that spots lost their intensity in a single step (Supp. Figure \ref{SIFig:SM_traces}), consistent with single-molecules photobleaching or transitioning from a very slowly diffusing state to a rapid one. Our imaging setup therefore allowed us to visualise single very slowly diffusing RecB molecules, and to measure the time they spent in this diffusive state.
+To quantify RecB binding time to DNA in live \ecoli, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:exp_principle}A). The fusion was previously used and characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process\cite{Lepore2019a,Lepore2023}. Due to the large size and topological constraints of the bacterial chromosome, DNA-bound RecB diffuses very slowly\cite{Lepore2023}. We therefore applied the previously developed technique of localisation enhancement\cite{Yu2006, Elf2007}: since RecB is present at low copy numbers in \ecoli\ ($\sim$5 molecules per cell on average\cite{Lepore2019a}), imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while immobile or slow-diffusing RecB molecules formed intense diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:exp_principle}A and \ref{Fig:exp_principle}B). The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these spots were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). However, their exact nature needed to be confirmed. Although DNA-bound molecules are expected to diffuse very slowly, the RecBCD-Halo complex diffuses in the crowded and constrained environment of the cytoplasm, and might undergo transient interactions with DNA\cite{Lepore2023}, which could lead to RecB spots forming independently of DNA binding. To gain more insight into the nature of RecB spots, we increased the number of induced DSBs by adding ciprofloxacin to agar pads before imaging, and measured the lifetime of the spots by recording 100-second timelapse videos with 2 sec interval between frames on different positions in the sample, for a total time of 60 min following exposure to ciprofloxacin (Figure \ref{Fig:lifetimes}A). The 1 second exposure time was optimal to detect RecB spots with good signal-to-noise, while limiting dye photobleaching and keeping a sufficient time resolution to determine spot lifetimes. Visual inspection of the timelapse data showed that RecB spot lifetime was hetereogenous, with a majority of spots being visible only for a few frames, and a small number persisting for longer times. These longer-lived spots became more frequent as the ciprofloxacin concentration was increased. Inspecting background-subtracted intensity time-traces for single RecB spots showed that spots lost their intensity in a single step (Supp. Figure \ref{SIFig:SM_traces}), consistent with single-molecules photobleaching or transitioning from a very slowly diffusing state to a rapid one. Our imaging setup therefore allowed us to visualise single very slowly diffusing RecB molecules, and to measure the time they spent in this diffusive state.
 
 \begin{figure}[htbp]
     \centering
@@ -20,7 +20,7 @@ Using the timelapse data, we built histograms of RecB spot lifetimes at the diff
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=.8\textwidth]{Figures/Fig2_RecB_lifetime.pdf}
-    \caption{RecB lifetime on DNA under ciprofloxacin exposure. \textbf{(A)} Example kymographs (2 sec interval, 100 sec total) of cells containing short- and long-lived RecB spots. \textbf{(B)} RecB spot lifetime histograms at 0, 3, 10, 20 and 30 ng/ml ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \ncells{66,764}. \nspots{170,138}. \textbf{(C)} RecB spot lifetime histograms (bars) for cells over-expressing the Gam protein, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \ncells{8,812}. \nspots{18,698}. \textbf{(D)} Probability of a spot corresponding to a DNA-bound RecB molecule, for cells over-expressing the Gam protein. Black dots show individual datasets, the black line is the average between them, and the red dashed line shows the smallest lifetime at which RecB spots have 95\% probability to be DNA-bound. \ncells{8,812}. \nspots{18,698}.}
+    \caption{RecB lifetime on DNA under ciprofloxacin exposure. \textbf{(A)} Example kymographs (2 sec interval, 100 sec total) of cells containing short- and long-lived RecB spots. \textbf{(B)} RecB spot lifetime histograms at 0, 3, 10, 20 and 30 ng/ml ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \ncells{66,764}. \nspots{170,138}. \textbf{(C)} RecB spot lifetime histograms (bars) for cells over-expressing the Gam protein, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \ncells{8,812}. \nspots{18,698}. \textbf{(D)} Probability of a spot corresponding to a DNA-bound RecB molecule, for cells over-expressing the Gam protein. Black dots show averages for individual datasets, the black line is the average between them, and the red dashed line shows the smallest lifetime at which RecB spots have 95\% probability to be DNA-bound. \ncells{8,812}. \nspots{18,698}.}
     \label{Fig:lifetimes}
 \end{figure*}
 
@@ -101,12 +101,12 @@ As for the wild-type strain, we imaged RecB, computed histograms of RecB spot li
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=.4\textwidth]{Figures/Fig3_RecB_recruitment.pdf}
-    \caption{Recruitment of RecB to DSBs. \textbf{(A)} Recruitment rate of RecB on DNA per cell at different ciprofloxacin concentrations. Black points show individual datasets, and bars the median value. \ncells{66,764}. \nspots{170,138}. \textbf{(B)} Recruitment rate of RecB on DNA per cell for the \dreca\ and \geneteneighty\ mutants. Black points show individual datasets, and bars the median value. \ncells{23,540}. \nspots{99,891}.}
+    \caption{Recruitment of RecB to DSBs. \textbf{(A)} Recruitment rate of RecB on DNA per cell at different ciprofloxacin concentrations. Black points show averages for individual datasets, and bars the median value between them. \ncells{66,764}. \nspots{170,138}. \textbf{(B)} Recruitment rate of RecB on DNA per cell for the \dreca\ and \geneteneighty\ mutants. Black points show averages for individual datasets, and bars the median value between them. \ncells{23,540}. \nspots{99,891}.}
     \label{Fig:recruitment}
 \end{figure}
 
 % RecB recruitment in WT
-Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per timelapse. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, this allowed us to calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}A). We expect that the recruitment rate of RecB to DSBs gives a close estimate of the rate of formation of DSBs by ciprofloxacin (see discussion). We estimated that under endogenous damage or low ciprofloxacin concentrations, 1 to 2 RecB molecules are recruited to DSBs per hour on average. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle\cite{Sinha2018}. Considering the division time in our growth conditions (35 min), this would correspond to a rate of $\sim$0.3 DSBs per hour, a value roughly consistent with our own estimate. As expected, the recruitment rate of RecB scaled with ciprofloxacin concentration, up to 8 RecB recruited to DNA per hour at 30 ng/ml. It has been reported that DSB repair from the point of RecBCD binding takes $\sim$15 min in \emph{E. coli}\cite{Wiktor2021}; therefore, it appears consistent that undergoing 8 DSBs per hour at 30 ng/ml ciprofloxacin (a concentration higher than the Minimum Inhibitory Concentration, MIC) will be lethal to most cells.
+Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per timelapse. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, this allowed us to calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}A). We expect that the recruitment rate of RecB to DSBs gives a close estimate of the rate of formation of DSBs by ciprofloxacin (see discussion). We estimated that under endogenous damage or low ciprofloxacin concentrations, 1 to 2 RecB molecules are recruited to DSBs per hour on average. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle\cite{Sinha2018}. Considering the division time in our growth conditions (35 min), this would correspond to a rate of $\sim$0.3 DSBs per hour, a value roughly consistent with our own estimate. As expected, the recruitment rate of RecB scaled with ciprofloxacin concentration, up to 8 RecB recruited to DNA per hour at 30 ng/ml. It has been reported that DSB repair from the point of RecBCD binding takes $\sim$15 min in \ecoli\cite{Wiktor2021}; therefore, it appears consistent that undergoing 8 DSBs per hour at 30 ng/ml ciprofloxacin (a concentration higher than the Minimum Inhibitory Concentration, MIC) will be lethal to most cells.
 
 % RecB recruitment in mutants
 Estimating the recruitment rate of RecB to DNA provided additional insight into the dynamics of DSB processing in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the \dreca\ mutant, the rate of recruitment of RecB to DSBs was increased compared to wild-type cells, both in the presence and absence of ciprofloxacin. As in both cases the rate of DSB formation is expected to be the same between the wild-type and the \dreca\ mutant, we can hypothesise that this higher rate of RecB recruitment to DNA is due to multiple recruitment events on the same original DSB that cannot be repaired. In the mutant cells, RecBCD processes the DNA, but the generated ssDNA cannot be coated with the RecA protein, and is therefore likely to be degraded by cellular endo- and exonucleases such as SbcCD and ExoI\cite{Zahradka2009}. Degradation of the ssDNA would lead to a blunting of the DNA end, hence creating a new substrate for RecBCD binding. This deleterious cycle was previously reported to occur in cells lacking the RecA protein, eventually leading to full chromosome degradation\cite{Capaldo1975,Skarstad1993}. In our experiment, it results in multiple recruitments of RecB to DNA for each DSB.
@@ -119,7 +119,6 @@ In the \geneteneighty\ mutant, RecB recruitment is higher than in WT cells, but 
 
 %% RecA imaging
 During DSB processing, RecBCD facilitates the loading of the RecA protein on single-stranded DNA. To broaden our view of the repair process downstream of RecBCD, we imaged a tandem fusion of RecA with the fluorescent protein SYFP2 which was previously shown to preserve RecA functionality\cite{Wiktor2021}. Based on the fluorescence distribution in the cells (Supp. Figure \ref{SIFig:reca_structures}A), we identified three states of RecA: diffuse, forming a bright focus, or forming an elongated filament, which matches previous \emph{in-vivo} observations of RecA\cite{Wiktor2021}. Because of the large diversity of shapes observed, especially for RecA filaments, the detection of RecA structures by rule-based algorithms was challenging. Therefore, we designed and trained a deep-learning algorithm capable of classifying individual cells based on the three types of spatial distributions cited above (Supp. Figures \ref{SIFig:object_class} and \ref{SIFig:reca_structures}B). In cells that were not exposed to ciprofloxacin, the RecA-associated fluorescence was mostly diffuse, and occasionally formed a bright focus or filament. This is consistent with the expectation that RecA diffuses freely in the cell in the absence of DNA damage, and only polymerises on DNA in the event of an endogenous DSB. After one hour of exposure, the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/ml ciprofloxacin, and $\sim$60\% at 30 ng/ml. RecA foci on the other hand formed quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/ml ciprofloxacin) and came back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments accumulate under constant exposure to ciprofloxacin (see Discussion).
-
 
 % Part 4: Colocalisation of RecB with the nucleoid (to be reviewed/adjusted)
 \subsection*{DNA-bound RecB colocalises with the bacterial nucleoid}
