Edited the paragraphs on nucleoid imaging in mutants

--- a/Results.tex
+++ b/Results.tex
@@ -133,10 +133,12 @@ During DSB processing, RecBCD facilitates the loading of the RecA protein on sin
 RecA loading on ssDNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid\cite{Odsbu2014}. To see if this was the case for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to concomitantly image RecB, and to correlate the position of DNA-bound RecB molecules (defined as RecB spots with a lifetime $>$10 sec, see Figure \ref{Fig:lifetimes}D) with that of the nucleoid. Figure \ref{Fig:nucleoid}A shows representative images of the nucleoid and DNA-bound RecB after 60 minutes of exposure to different concentrations of ciprofloxacin. In untreated cells, the nucleoid was often observed to be bi-lobed, consistently with our previous observations\cite{Lepore2023}. After exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. Due to nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/ml of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}). In addition to the compaction, we observed that nucleoids were increasingly centred and the cells elongated upon increasing exposure to ciprofloxacin (in time and concentration), as shown in Supp. Figure \ref{SIFig:nucleoid_position}.
 
 % Correlation of nucleoid and RecB spots
-Long-lived RecB spots were found in close proximity to the nucleoid (Figure \ref{Fig:nucleoid}A), which strengthens our interpretation that they are DNA-bound RecB molecules. Figure \ref{Fig:nucleoid}B shows the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Upon exposure to increasing ciprofloxacin concentrations, induction of the SOS response caused the cells to elongate significantly (from 3.1 µm $\pm$ 0.19 on average in the absence of ciprofloxacin to 5.5 µm $\pm$ 0.71 after 75 min of exposure to 30 ng/ml ciprofloxacin, Supp. Figure \ref{SIFig:Gam_cell_length}). Despite this, and due to compaction and centring, the nucleoid remained within $\sim$2 µm either side of the cell centre. The distribution of DNA-bound RecB molecules overlapped strongly with nucleoid density, indicating that as the nucleoid was compacted, newly formed DSBs triggered RecB recruitment at the centre of the cell, where the nucleoid is located. Furthermore, the close overlap of the distributions for DNA-bound RecB and nucleoid density strongly suggests that RecB binding occurs at random positions within the nucleoid, consistent with ciprofloxacin causing DSBs at random chromosomal locations.
+Long-lived RecB spots were found in close proximity to the nucleoid (Figure \ref{Fig:nucleoid}A), which strengthens our interpretation that they are DNA-bound RecB molecules. Figure \ref{Fig:nucleoid}B shows the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Upon exposure to increasing ciprofloxacin concentrations, induction of the SOS response caused the cells to elongate significantly (from 3.1 µm $\pm$ 0.19 on average in the absence of ciprofloxacin to 5.5 µm $\pm$ 0.71 after 75 min of exposure to 30 ng/ml ciprofloxacin, Supp. Figure \ref{SIFig:Gam_cell_length}). Despite this, and due to compaction and centring, the nucleoid remained within $\sim$2 µm either side of the cell centre. The distribution of DNA-bound RecB molecules overlapped strongly with nucleoid density, indicating that as the nucleoid was compacted, newly formed DSBs triggered RecB recruitment at the centre of the cell, where the nucleoid was located. Furthermore, the close overlap of the distributions for DNA-bound RecB and nucleoid density strongly suggests that RecB binding occurs at random positions within the nucleoid, consistent with ciprofloxacin causing DSBs at random chromosomal locations.
 
-% Compaction of the nucleoid in mutants
-The differences in induction of the SOS response between the wild-type cells and the \dreca\ and \geneteneighty\ mutants resulted in different states of compaction for the bacterial nucleoid (Figure \ref{Fig:nucleoid}C, Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). Whereas in the wild-type, exposure to ciprofloxacin triggered compaction and centring of the nucleoid, the inability of the \dreca\ mutant to induce the SOS response resulted in two separate nucleoid regions at the cell poles. Despite the absence of SOS induction, the nucleoid occupied a smaller fraction of the cell in the \dreca\ mutant after exposure to ciprofloxacin (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This can be attributed to the progressive degradation of the bacterial chromosome by the repeated cycles of RecBCD binding (Figure \ref{Fig:recruitment}B). In the \geneteneighty\ mutant, the nucleoid appeared more disorganised than in wild-type cells, especially in the presence of 30 ng/ml ciprofloxacin, where it often formed irregular shapes and small segregated regions in the cell (Figure \ref{Fig:nucleoid}C). Furthermore, in the \geneteneighty\ mutant the nucleoid did not undergo compaction within the 75 min of our experiment (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be a reflection of the less efficient RecA loading in this mutant, leading to different time dynamics of the SOS induction and either impaired or significantly delayed nucleoid compaction.
+\subsection*{Nucleoid compaction requires RecA loading}
 
-% Colocalisation of RecB with the nucleoid in mutants
-In both mutant strains, the localisation of DNA-bound RecB overlapped with the bacterial nucleoid (Figure \ref{Fig:nucleoid}D), indicating that RecB binding occurred at random positions within the nucleoid, similarly to the wild-type. In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DNA-bound RecB. This result was expected, as \dreca\ cells were unable to induce the SOS response, and therefore did not undergo nucleoid compaction. In the \geneteneighty\ mutant, both nucleoid density and DNA-bound RecB distributions form a single peak at the cell centre, in the presence and absence of ciprofloxacin. This is consistent with the \geneteneighty\ mutant having a higher baseline of SOS induction than wild-type cells, as previously reported\cite{Lepore2023}. The slightly broader distribution of nucleoid density and DNA-bound RecB position in the \geneteneighty\ mutant exposed to ciprofloxacin compared to the wild-type reinforces the hypothesis that nucleoid compaction is delayed in this mutant.
+The spatial distribution of nucleoid density and DNA-bound RecB was affected in the \dreca\ and \geneteneighty\ mutants (Figures \ref{Fig:nucleoid}C and \ref{Fig:nucleoid}D). In the \dreca\ mutant, exposure to ciprofloxacin did not trigger nucleoid compaction and centring as in wild-type cells. This confirmed that nucleoid compaction under ciprofloxacin exposure requires RecA loading, and most likely the induction of the SOS response. Despite the absence of compaction, the nucleoid occupied a smaller fraction of the cell in the \dreca\ mutant after exposure to ciprofloxacin (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This can be attributed to the progressive degradation of the bacterial chromosome by the repeated cycles of RecBCD binding (Figure \ref{Fig:recruitment}B).
+
+In the \geneteneighty\ mutant, the nucleoid often formed irregular shapes and small segregated regions in the cell (Figure \ref{Fig:nucleoid}C). This disorganisation was especially visible in the presence of 30 ng/ml ciprofloxacin. Furthermore, in the \geneteneighty\ mutant the nucleoid did not undergo compaction within the 75 min of our experiment (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be a reflection of the less efficient RecA loading in this mutant, leading to different time dynamics of the SOS induction and either impaired or significantly delayed nucleoid compaction.
+
+In both mutant strains, the localisation of DNA-bound RecB overlapped with the bacterial nucleoid (Figure \ref{Fig:nucleoid}D), indicating that RecB binding occurred at random positions within the nucleoid, similarly to the wild-type. In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DNA-bound RecB. This result was expected, as \dreca\ cells were unable to induce the SOS response, and therefore did not undergo nucleoid compaction. In the \geneteneighty\ mutant, both nucleoid density and DNA-bound RecB distributions form a single peak at the cell centre, in the presence and absence of ciprofloxacin. This is consistent with the \geneteneighty\ mutant having a higher baseline of SOS induction than wild-type cells, as reported in our previous work\cite{Lepore2023}, which would result in a more compacted nucleoid. The absence of change in the distribution of nucleoid density and DNA-bound RecB position in the \geneteneighty\ mutant upon exposure to ciprofloxacin reinforces the hypothesis that nucleoid compaction is impaired or delayed in this mutant.
