Adjusted x ticks on histograms

--- a/Notebooks/Mutants/Nucleoid.ipynb
+++ b/Notebooks/Mutants/Nucleoid.ipynb
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,10 +789,11 @@
     "    .layout(size=(9,6))\n",
     "    .add(so.Bars(color='magenta', alpha=.4), so.Agg(),  y='RecB')\n",
     "    .add(so.Area(color='green'), so.Agg(), y='Nucleoid')\n",
+    "    .scale(x=so.Continuous().tick(every=2))\n",
     "    .label(x='Distance from mid-cell (µm)', y='Probability')\n",
     "    .limit(x=(-5, 5), y=(0, None))\n",
     "    .theme(plotting_context('talk'))\n",
-    "    .save(loc='/media/daniel/HDD Daniel/DanielThedie/Figures/RecB_article_figures/4_Mutants/Nucleoid_RecB_position.svg', format='svg', bbox_inches='tight')\n",
+    "    # .save(loc='/media/daniel/HDD Daniel/DanielThedie/Figures/RecB_article_figures/4_Mutants/Nucleoid_RecB_position.svg', format='svg', bbox_inches='tight')\n",
     ")"
    ]
   },
