Added the advantages of detecting DSBs with RecB

--- a/Discussion.tex
+++ b/Discussion.tex
@@ -8,7 +8,7 @@ Given RecBCD's high affinity for DSBs \emph{in-vivo} and our ability to detect i
 
 It should be noted that ciprofloxacin is expected to produce double-sided DSBs, hence leading to two RecB recruitments per break. We did not take this into account in our estimation of the DSB formation rate, as it has been previously suggested that the two sides of a DSB are kept in close proximity during DNA repair\cite{Vickridge2017,Keyamura2019}, and our imaging setup would not allow us to separate two RecB spots located close together. Indeed, our timelapse images of RecB binding seldom show two spots next to each other, further supporting the idea that we are not able to resolve RecBCD binding to both sides of a DSB.
 
-Overall, our experimental setup provides a useful tool to quantify the availability of free double-stranded DNA ends in wild-type \ecoli\ \emph{in-vivo}.
+Using RecBCD as a probe to label free double-stranded DNA ends allows us to monitor DSB formation in live \ecoli\ in real time, with single-cell sensitivity. It does not require the DSBs to be site-specific, and does not disturb the repair pathway, which makes it possible to induce sub-lethal amounts of DSBs and to image the cell's response. This tool could be further improved in the future by substituting the Halo-tag with a bright and photostable fluorescent protein, which would enable long-term imaging, for example in a mother-machine microfluidic device.
 
 \subsection*{Multiple RecB recruitments per DSB in the $\mathbf{\Delta}$\emph{reca} and RecB$\mathbf{_{1080}}$ mutants}
 
