Added plan for the abstract

--- a/Article.tex
+++ b/Article.tex
@@ -38,7 +38,13 @@
 \maketitle
 
 \begin{abstract}
-Abstract text will come here.
+% Scene setting
+% What is our main question?
+% What experimental setup did we use?
+% What data did we produce?
+% What is the main finding?
+% General sentence on what the article contributes
+
 \end{abstract}
 
 \begin{keywords}
