--- a/Discussion.tex
+++ b/Discussion.tex
@@ -1,7 +1,8 @@
 \section*{Discussion}
 
 \subsection*{RecB dissociation does not depend on RecA loading}
-One of the main questions asked in this study was how long RecBCD stays bound to DNA following DSB recognition. We have been able to estimate that in wild-type \ecoli, RecB stays bound to DNA for 10 to 15 seconds on average (Table \ref{tab:fit_results}), independently of the concentration of ciprofloxacin. Given RecBCD's high processivity (digesting several kilobases of DNA before recognising a Chi-site) and its processing speed ($\sim$1.6 kb/s\cite{Wiktor2018}), we can reasonably expect that most of RecB's binding time is explained by its DNA degradation prior to Chi recognition, followed by rapid disassembly after Chi. This led us to ask whether RecB dissociation from DNA was triggered by its interaction with RecA. Imaging RecB in a \dreca\ mutant confirmed that this is not the case, and that RecB dissociation occurs independently of RecA loading (Table \ref{tab:fit_mutants}). We can hypothesise that RecBCD's conformational change upon Chi recognition induces a destabilisation of the complex, thereby greatly reducing its processivity, and resulting in dissociation shortly after Chi. Interestingly, the \geneteneighty\ mutant had a reduced dissociation rate compared to wild-type cells, which highlights the importance of RecB's exonuclease activity in the process and confirms our previous hypothesis on DNA binding in this mutant\cite{Lepore2023}. It is possible that digestion of the unwound DNA strands is a pre-requisite for RecBCD dissociation, and that it is performed by other cellular exonucleases in the \geneteneighty\ mutant.
+In this work, we used imaging of RecB bound to DNA to elucidate key aspects of RecBCD's processing of DSBs in vivo, focusing on how long RecBCD remains bound to DNA after DSB recognition and whether this binding time depends on the level of DNA damage.  We found that in wild-type \ecoli, RecB stays bound to DNA for 10 to 15 seconds on average (Table \ref{tab:fit_results}), independently of the concentration of ciprofloxacin. 
+Additionally, we investigated whether RecA might play a role in promoting RecBCD dissociation from DNA. Previously, it was proposed that RecBCD dissociates from DNA upon recognizing the Chi site \cite{Taylor1999}. Given RecBCD's high processivity (digesting several kilobases of DNA before recognising a Chi-site) and its processing speed ($\sim$1.6 kb/s\cite{Wiktor2018}), we can reasonably expect that most of RecB's binding time is explained by its DNA degradation prior to Chi recognition, followed by rapid disassembly after Chi. However, considering the role of the RecB nuclease domain in recruiting RecA to ssDNA \cite{Spies2006}, we questioned whether RecB's dissociation from DNA could also be triggered by its interaction with RecA. Imaging RecB in a \dreca\ mutant confirmed that this is not the case, and that RecB dissociation occurs independently of RecA loading (Table \ref{tab:fit_mutants}). We can hypothesise that RecBCD's conformational change upon Chi recognition induces a destabilisation of the complex, thereby greatly reducing its processivity, and resulting in dissociation shortly after Chi. Interestingly, the \geneteneighty\ mutant had a reduced dissociation rate compared to wild-type cells, which highlights the importance of RecB's exonuclease activity in the process and the possibility that digestion of the unwound DNA strands is a pre-requisite for RecBCD dissociation, and that it is performed by other cellular exonucleases in the \geneteneighty\ mutant.
 
 \subsection*{Using RecB as a marker to quantify DSB formation}
 Given RecBCD's high affinity for DSBs \emph{in-vivo} and our ability to detect its binding to DNA, the system is a useful tool to detect the presence of DSBs in \ecoli. Our experiments allowed us to estimate the number of recruitment of RecB to DSBs per hour, under different ciprofloxacin concentrations (Figure \ref{Fig:recruitment}A), and in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the wild-type, the general pathway for DSB repair suggests that RecBCD is recruited once per DSB (Figure \ref{Fig:pathways}). We can therefore reasonably expect that the observed number of RecB recruitments observed matches with the number of DSBs formed (1 to 8 per hour, depending on ciprofloxacin concentration). In the \dreca\ and \geneteneighty\ mutants however, the disruptions to the DSB repair pathway lead to multiple RecB recruitments per DSB. We are therefore not able to estimate the rate of DSB formation in these mutants.
@@ -19,7 +20,7 @@ Using RecBCD as a probe to label free double-stranded DNA ends allows us to moni
     \label{Fig:pathways}
 \end{figure*}
 
-Our observations of cell elongation (Supp. Figures \ref{SIFig:mutants_bf} and \ref{SIFig:mutants_cell_lengths}), RecB recruitment to DNA (Figure \ref{Fig:recruitment}), and nucleoid position (Figure \ref{Fig:nucleoid}) in the different mutant strains have led us to the model of RecB recruitment described in Figure \ref{Fig:pathways}, which reinforces and extends the model we previously proposed in \cite{Lepore2023}. In wild-type cells, a DSB is recognised by RecBCD, which promotes RecA loading. The RecA filament triggers the SOS response, and is used for homology search and repair. In the \dreca\ mutant, the 3' ssDNA generated by RecBCD is first coated by SSB, and then degraded by the SbcCD and ExoI nucleases\cite{Zahradka2009}. This leads to blunting of the DNA end, creating a new substrate on which RecBCD can bind. This circle leads to multiple RecBCD recruitments per DSB, and eventually to full chromosome degradation. In the \geneteneighty\ mutant, RecBCD unwinds DNA without degrading it. After the ssDNA is coated with SSB, two competing pathways take place: either DNA degradation by SbcCD and ExoI leading to DNA-end blunting and re-recruitment of RecBCD, or displacement of SSB by RecFOR and loading of RecA, leading to SOS induction and homologous repair.
+Our observations of cell elongation (Supp. Figures \ref{SIFig:mutants_bf} and \ref{SIFig:mutants_cell_lengths}), RecB recruitment to DNA (Figure \ref{Fig:recruitment}), and nucleoid position (Figure \ref{Fig:nucleoid}) in the different mutant strains have led us to the model of RecB recruitment described in Figure \ref{Fig:pathways}, which confirms and extends the model we previously proposed in \cite{Lepore2023}. In wild-type cells, a DSB is recognised by RecBCD, which promotes RecA loading. The RecA filament triggers the SOS response, and is used for homology search and repair. In the \dreca\ mutant, the 3' ssDNA generated by RecBCD is first coated by SSB, and then degraded by the SbcCD and ExoI nucleases\cite{Zahradka2009}. This leads to blunting of the DNA end, creating a new substrate on which RecBCD can bind. This circle leads to multiple RecBCD recruitments per DSB, and eventually to full chromosome degradation. In the \geneteneighty\ mutant, RecBCD unwinds DNA without degrading it.  Our data suggests that after the ssDNA is coated with SSB, two competing pathways take place: either DNA degradation by SbcCD and ExoI leading to DNA-end blunting and re-recruitment of RecBCD, or displacement of SSB by RecFOR and loading of RecA, leading to SOS induction and homologous repair.
 
 \subsection*{Accumulation of RecA filaments under high DNA damage}
 Under exposure to high ciprofloxacin concentrations (20-30 ng/ml), we observed an accumulation of cells that contained a RecA filament (Supp. Figures \ref{SIFig:reca_structures}A and \ref{SIFig:reca_structures}B). At these ciprofloxacin concentrations, we have determined that cells undergo frequent DSBs, leading to multiple recruitments of RecB to DNA over the course of the experiment (up to 8 per hour, Figure \ref{Fig:recruitment}A). Given RecBCD's high processivity\cite{Wiktor2018}, such a high number of RecB recruitments would likely result in several kilobases of DNA being digested at different chromosomal locations. Furthermore, it has been previously reported that DSB repair by RecBCD takes ~15 min from RecBCD binding to a DSB to completion of the repair\cite{Wiktor2021}. At a rate of 8 RecB recruitments per hour, it is likely that several DSBs would be processed simultaneously, resulting in fragmentation of the bacterial chromosome. If a homologous copy of the break site is not present in the cell, we expect that the repair process will stall at the homology search stage, after formation of the RecA filament, which is consistent with our observation that a large proportion of cells contain RecA filaments following exposure to over-MIC ciprofloxacin concentrations.
@@ -28,3 +29,8 @@ Under exposure to high ciprofloxacin concentrations (20-30 ng/ml), we observed a
 Imaging RecB simulteanously to the bacterial nucleoid reinforced our interpretation that long-lived RecB spots ($>$10 sec) are DNA-bound RecB molecules, and helped us understand their spatial distribution in the cell. Nucleoid compaction in \ecoli\ had previously been reported after UV irradiation\cite{Odsbu2014}, and we were able to confirm that a similar compaction occurs under ciprofloxacin treatment (Supp. Figure \ref{SIFig:nucleoid_compaction}). As expected, DNA-bound RecB molecules colocalised with the nucleoid. The close match between nucleoid density and DNA-bound RecB distribution hinted that RecB binding to DSBs occurred at random positions in the nucleoid, as would be expected given that ciprofloxacin causes DSBs at random sites in the genome.
 
 Nucleoid imaging in the \dreca\ and \geneteneighty\ mutants pointed out the involvement of RecA loading (and probably SOS induction) in nucleoid compaction, again confirming previous observations\cite{Odsbu2014}. The absence of any significant nucleoid compaction in the \geneteneighty\ mutant despite its ability to induce the SOS response was surprising, and could result from a significant delay in SOS induction due to the loading of RecA by the RecFOR alternative pathway.
+
+ADD a conclusion for all the discussion? a couple of sentences
+something like: 
+Taken together, this work provides a detailed picture of RecBCD’s interaction with DNA following DSBs. We found that RecB dissociation is independent of RecA and that binding time is unaffected by DNA damage levels. Additionally, we observed changes in nucleoid conformation in response to DNA damage and examined the effects of high antibiotic levels on the RecA filament. The model we developed offers an overview of RecBCD recruitment and dissociation from DNA, depending on the strain's ability to effectively carry out or complete repair.
+These findings contribute valuable insights into the dynamics of DNA repair mechanisms in \ecoli\, suggesting that RecBCD dissociation from DNA is an intrinsic property of the complex, largely unaffected by external factors such as DNA damage levels or RecA loading.
