Updated interpretation of 1080 nucleoid centring

--- a/Results.tex
+++ b/Results.tex
@@ -141,4 +141,4 @@ The spatial distribution of nucleoid density and DNA-bound RecB was affected in 
 
 In the \geneteneighty\ mutant, the nucleoid often formed irregular shapes and small segregated regions in the cell (Figure \ref{Fig:nucleoid}C). This disorganisation was especially visible in the presence of 30 ng/ml ciprofloxacin. Furthermore, in the \geneteneighty\ mutant the nucleoid did not undergo compaction within the 75 min of our experiment (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be a reflection of the less efficient RecA loading in this mutant, leading to different time dynamics of the SOS induction and either impaired or significantly delayed nucleoid compaction.
 
-In both mutant strains, the localisation of DNA-bound RecB overlapped with the bacterial nucleoid (Figure \ref{Fig:nucleoid}D), indicating that RecB binding occurred at random positions within the nucleoid, similarly to the wild-type. In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DNA-bound RecB. This result was expected, as \dreca\ cells were unable to induce the SOS response, and therefore did not undergo nucleoid compaction. In the \geneteneighty\ mutant in the absence of ciprofloxacin, both nucleoid density and DNA-bound RecB distributions were more centred than in wild-type cells. This is consistent with the \geneteneighty\ mutant having a higher baseline of SOS induction than wild-type cells, as reported in our previous work\cite{Lepore2023}, which would result in a more compacted nucleoid on average. The absence of change in the distribution of nucleoid density and DNA-bound RecB position in the \geneteneighty\ mutant upon exposure to ciprofloxacin reinforces the hypothesis that nucleoid compaction is impaired or delayed in this mutant.
+In both mutant strains, the localisation of DNA-bound RecB overlapped with the bacterial nucleoid (Figure \ref{Fig:nucleoid}D), indicating that RecB binding occurred at random positions within the nucleoid, similarly to the wild-type. In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DNA-bound RecB. This result was expected, as \dreca\ cells were unable to induce the SOS response, and therefore did not undergo nucleoid compaction. In the \geneteneighty\ mutant in the absence of ciprofloxacin, both nucleoid density and DNA-bound RecB distributions were more centred than in wild-type cells, despite the nucleoid occupying the same fraction of the cell area (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be due to the slower growth rate of the \teneighty\ mutant resulting in a larger proportion of cells having a single centred nucleoid, rather than a bi-lobed nucleoid as seen in the wild-type and the \dreca\ mutant. The absence of change in the distribution of nucleoid density and DNA-bound RecB position in the \geneteneighty\ mutant upon exposure to ciprofloxacin reinforces the hypothesis that nucleoid compaction is impaired or delayed in this mutant.
